# ahara-business

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MAIL-FOUNDATION-M0-PHASE.md  MAIL-FOUNDATION-M1-PHASE.md  MAIL-FOUNDATION-M2-PHASE.md  MAIL-FOUNDATION-M3-PHASE.md  MAIL-FOUNDATION-M4-PHASE.md  MAIL-FOUNDATION-M5-PHASE.md  MAIL-FOUNDATION-M6-PHASE.md  MAIL-FOUNDATION-M7-PHASE.md  MAIL-FOUNDATION-M8-PHASE.md  MAIL-FOUNDATION-PLAN.md  Makefile  README.md  mail-foundation-spec.md  platform.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/api/: Cargo.toml
backend/api/src/: app_authorization_routes.rs  calendar_routes.rs  finance_routes.rs  forwarding_audit_routes.rs  lib.rs  main.rs  test_support.rs
backend/feedback-handler/: Cargo.toml
backend/feedback-handler/src/: lib.rs  main.rs
backend/ingest/: Cargo.toml
backend/ingest/src/: lib.rs  main.rs
backend/receipt-gate/: Cargo.toml
backend/receipt-gate/src/: lib.rs  main.rs
backend/send-worker/: Cargo.toml
backend/send-worker/src/: lib.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: app_authorizations.rs  attachments.rs  auth.rs  calendar.rs  calendar_ics.rs  calendar_model.rs  calendar_types.rs  config.rs  contacts.rs  db.rs  domain_config.rs  error.rs  feedback.rs  finance.rs  finance_model.rs  finance_occurrence.rs  finance_sql.rs  finance_types.rs  forwarding.rs  forwarding_audit.rs  lib.rs  mail_security.rs  mailbox.rs  observability.rs  outbound.rs  ports.rs  raw_mail_store.rs  retention.rs  routing.rs  ses_mail_sender.rs
backend/shared/src/domain_config/: tests.rs
backend/shared/src/inbound/: limits.rs  mime.rs  mod.rs  receipt_gate.rs  repository.rs  routing.rs  security.rs  service.rs  ses_event.rs  text.rs  threading.rs  types.rs
backend/shared/tests/: feedback_model.rs  finance_model.rs  forwarding_model.rs  inbound_ingest_model.rs  inbound_routing.rs  inbound_service.rs  inbound_threading.rs  mail_model.rs  mailbox_model.rs  outbound_model.rs
backend/shared/tests/fixtures/inbound/: display_name_spoof.eml  html_only_dangerous.eml  html_only_safe.eml  multipart_alternative.eml  nested_multipart.eml  ses_receipt_clean.json  ses_receipt_multi_record.json  simple_text.eml  text_and_html_prefers_text.eml  threaded_reply.eml  with_attachments.eml
db/migrations/: 001_create_mail_model.sql  002_attachments_retention_forwarding.sql  003_calendar_booking.sql  004_tax_audit_finance.sql  005_recurring_expense_occurrences.sql  README.md
docs/: README.md  architecture.md  backlog.md  business-hub.md  deploy.md  operations.md  smoke-check.md
docs/adr/: 0001-rust-lambda-and-react-spa.md  0002-public-authenticated-text-only-ui.md  0003-shared-cognito-strong-auth.md  0004-project-owned-mail-infrastructure.md  0005-relational-mail-model-and-outbound-work.md  0006-pre-s3-receipt-gate.md  0007-raw-mime-retention-and-limits.md  0008-shared-access-and-secure-file-sharing-service.md  README.md
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/public/: site.webmanifest
frontend/src/: App.test.tsx  App.testSupport.ts  App.tsx  accessApi.ts  accessTypes.ts  api.test.ts  api.ts  apiCore.ts  appAuthorizations.test.tsx  appAuthorizations.tsx  appAuthorizationsTypes.ts  appMark.tsx  appWorkspace.tsx  attachmentFiles.ts  auth.test.ts  auth.ts  businessApi.test.ts  calendarBooking.test.tsx  calendarBooking.tsx  calendarBookingDrafts.ts  calendarBookingParts.tsx  config.ts  contacts.test.tsx  contacts.tsx  contactsTypes.ts  (+34 more)
scripts/: README.md  check-file-lengths.sh  deploy.sh  file-length-baseline.txt  run-backend-integration-tests.sh
(+22 files in other folders)
