[workspace]
resolver = "2"
members = [
    "shared",
    "api",
    "ingest",
    "receipt-gate",
    "send-worker",
    "feedback-handler",
]

[workspace.dependencies]
async-trait = "0.1"
aws-config = "1.8.18"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1.135.0"
aws-sdk-ses = "1"
axum = "0.8"
base64 = "0.22"
lambda_http = "0.14"
lambda_runtime = "0.14"
jsonwebtoken = "9"
mailparse = "0.16.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.27.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
shared = { path = "shared" }
