[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
lambda_http = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
