[package]
name = "feedback-handler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "feedback-handler"
path = "src/main.rs"

[dependencies]
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
