[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
