[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-ses = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
mailparse = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
